test/infer-out/report.txt
#0
test_main.c:111: error: Buffer Overrun L3
  Offset: [1, +oo] Size: [0, +oo] by call to `list_combine`.
  109.                     sep = periodic_separation(&List[i],&List[j],boxSize,3);
  110.                     if (sep <= MAX_SEP2) {
  111.                         list_combine(List,i,j);
                               ^
  112.                     }
  113.                 }

#1
test_main.c:45: error: Impure Function
  Impure function main.
  43. 
  44. /* main program */
  45. int main(int argc, char *argv[]) {
      ^
  46. 
  47.     int i,j;

#2
test_main.c:256: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 179 by call to `malloc`, is not freed after the last access at line 256, column 9.
  254. 
  255.     // check if file ptr exists
  256.     if (f == NULL) {
               ^
  257.         printf("Error: Failed to open file");
  258.         return -4;

#3
test_main.c:265: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 202 by call to `malloc`, is not freed after the last access at line 265, column 13.
  263.     
  264.     // write results to file 
  265.     for(i=0;i<count;i++) {
                   ^
  266.       if (Star[i]>=MassLimit) {
  267.         // Write masses to file

#4
test_main.c:265: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 207 by call to `malloc`, is not freed after the last access at line 265, column 13.
  263.     
  264.     // write results to file 
  265.     for(i=0;i<count;i++) {
                   ^
  266.       if (Star[i]>=MassLimit) {
  267.         // Write masses to file

#5
test_main.c:265: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 210 by call to `malloc`, is not freed after the last access at line 265, column 13.
  263.     
  264.     // write results to file 
  265.     for(i=0;i<count;i++) {
                   ^
  266.       if (Star[i]>=MassLimit) {
  267.         // Write masses to file

#6
test_main.c:265: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 212 by call to `malloc`, is not freed after the last access at line 265, column 13.
  263.     
  264.     // write results to file 
  265.     for(i=0;i<count;i++) {
                   ^
  266.       if (Star[i]>=MassLimit) {
  267.         // Write masses to file

#7
test_main.c:281: error: Impure Function
  Impure function read_data_n.
  279. };
  280. 
  281. int read_data_n(FILE *fp, float *boxSize) {
       ^
  282. 
  283.     char buf[1024];

#8
test_main.c:292: error: Impure Function
  Impure function read_data.
  290. 
  291. 
  292. void read_data(FILE *fp, struct liststruct *L, int n) {
       ^
  293. 
  294.     int i;

#9
test_main.c:316: error: Pure Function
  Side-effect free function periodic_separation.
  314. };
  315. 
  316. float periodic_separation(struct liststruct *a, struct liststruct *b, float boxSize, int dim) {
       ^
  317.     float t,d = 0;
  318.     float boxHalf = boxSize / 2.;

#10
test_main.c:333: error: Impure Function
  Impure function list_combine.
  331. };
  332. 
  333. void list_combine(struct liststruct *L, long i, long j) {
       ^
  334. 
  335.     /* Parts 2 & 3 */

Found 11 issues
            Issue Type(ISSUED_TYPE_ID): #
              Memory Leak(MEMORY_LEAK): 5
      Impure Function(IMPURE_FUNCTION): 4
          Pure Function(PURE_FUNCTION): 1
  Buffer Overrun L3(BUFFER_OVERRUN_L3): 1
